# lib/db/src/schema/index.ts
@@ -1,3 +1,5 @@
 export * from "./users";
 export * from "./prayers";
 export * from "./sessions";
+export * from "./conversations";
+export * from "./messages";
